CMP0104 warnings on non-CUDA targets
I have a main CMakeLists.txt with an option
for CUDA support, which sets CMAKE_CUDA_ARCHITECTURES
to prevent the CMP0104 warning. However, targets added before this - and these do not use CUDA at all - trigger the CMP0104 warning.
I am using the Visual Studio 2019 generator.